# caai_slam

./: .gitignore  CAAI_SLAM_Architecture.md  CAAI_SLAM_Quick_Reference.md  CAAI_SLAM_State_Machines.md  CMakeLists.txt  config.yaml  tcp_video_sender.py
cmake/: caai_slam-config.cmake.in
include/caai_slam/app/: slam_app.hpp
include/caai_slam/backend/: fixed_lag_smoother.hpp  graph_optimizer.hpp  marginalization.hpp
include/caai_slam/core/: config.hpp  slam_system.hpp  types.hpp
include/caai_slam/frontend/: feature_extractor.hpp  feature_matcher.hpp  frame.hpp  keyframe.hpp
include/caai_slam/loop/: common.hpp  geometric_verification.hpp  loop_detector.hpp  place_recognition.hpp
include/caai_slam/mapping/: covisibility_graph.hpp  keyframe_database.hpp  local_map.hpp
include/caai_slam/utils/: calibration.hpp  euroc_loader.hpp  time_sync.hpp  triangulation.hpp
include/caai_slam/vio/: imu_preintegration.hpp  vio_initializer.hpp  visual_frontend.hpp
src/app/: slam_app.cpp
src/backend/: fixed_lag_smoother.cpp  graph_optimizer.cpp  marginalization.cpp
src/core/: config.cpp  slam_system.cpp
src/frontend/: feature_extractor.cpp  feature_matcher.cpp  frame.cpp  keyframe.cpp
src/loop/: common.cpp  geometric_verification.cpp  loop_detector.cpp  place_recognition.cpp
src/mapping/: covisibility_graph.cpp  keyframe_database.cpp  local_map.cpp
src/utils/: calibration.cpp  euroc_loader.cpp  time_sync.cpp  triangulation.cpp
src/vio/: imu_preintegration.cpp  vio_initializer.cpp  visual_frontend.cpp
tools/: generate_akaze_vocab.cpp
